# eunomia-cicd-test

./: .gitignore  PRD.md  README.md  pyproject.toml
.github/workflows/: eunomia.yml
eunomia_v2/: __init__.py
eunomia_v2/agents/: architect.py  developer.py  devops.py  planner.py  qa.py  subagents.py
eunomia_v2/api/: auth.py  schemas.py  server.py  session_manager.py
eunomia_v2/api/routes/: __init__.py  sessions.py  streaming.py
eunomia_v2/cicd/: __init__.py  generator.py  models.py
eunomia_v2/cicd/templates/: github_actions.yml  gitlab_ci.yml  jenkinsfile
eunomia_v2/cli/: main.py  renderer.py
eunomia_v2/documents/: __init__.py  generator.py  loader.py  models.py
eunomia_v2/documents/templates/: adr.yaml  prd.yaml  readme.yaml  runbook.yaml  tdd.yaml  test_plan.yaml
eunomia_v2/graph/: __init__.py  orchestrator.py  routing.py  state.py  streaming.py
eunomia_v2/models/: results.py  task.py
eunomia_v2/persistence/: __init__.py  checkpointer.py  session_store.py
eunomia_v2/prompts/: architect.py  developer.py  devops.py  document.py  planner.py  qa.py
eunomia_v2/utils/: env.py  git.py  paths.py
