[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eunomia-v2"
version = "0.1.0"
description = "Autonomous multi-agent software development framework built on LangGraph + Deep Agents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Iron Forge" },
]
keywords = ["ai", "agents", "langgraph", "deep-agents", "code-generation", "multi-agent"]

dependencies = [
    # Core orchestration
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "deepagents>=0.1.0",

    # Model providers
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.0.0",

    # API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",

    # Utilities
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
eunomia-v2 = "eunomia_v2.cli.main:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--timeout=60 -v"

[tool.mypy]
python_version = "3.12"
strict = true
